	  kconfig-frontends tools (2014-3-5)
	* arch/avr/Kconfig, avr32/Kconfig, at32uc3/Kconfig, atmega/Kconfig, and
	  at90usb/Kconfig:  Reshuffle lots of AVR-related configuration names to
	  make space for AVR32.  Populate AVR32 Kconfig file (2014-3-5).
	* configs/avr32dev1/ostest: Configuration converted to use the
	  kconfig-frontends tools (2014-3-5)
	* configs/avr32dev1/nsh: Configuration converted to use the
	  kconfig-frontends tools (2014-3-5)
	* configs/ntosd-dm320/nettest: Configuration converted to use the
	  kconfig-frontends tools (2014-3-5)
	* configs/ntosd-dm320/nsh: Configuration converted to use the
	  kconfig-frontends tools (2014-3-5)
	* configs/ntosd-dm320/poll: Configuration converted to use the
	  kconfig-frontends tools (2014-3-5)
	* configs/ntosd-dm320/thttpd: Configuration converted to use the
	  kconfig-frontends tools (2014-3-5)
	* configs/ntosd-dm320/udp: Configuration converted to use the
	  kconfig-frontends tools (2014-3-5)
	* configs/ntosd-dm320/uip: Configuration converted to use the
	  kconfig-frontends tools (2014-3-5)
	* arch/Kconfig, arch/arm/Kconfig, configs/ea3131/Kconfig,
	  configs/ea3131/pgnsh/defconfig, configs/ea3131/src/up_fillpage.c,
	  configs/ea3152/Kconfig, nuttx/configs/ea3152/src/up_fillpage.c,
	  include/nuttx/page.h, and tools/cfgdefine.c:  Add configuration
	  settings for the on-demand paging option (2014-3-5).
	* configs/ea3131/pgnsh: Configuration converted to use the
	  kconfig-frontends tools (2014-3-5)
	* configs/qemu-i486/ostest: Configuration converted to use the
	  kconfig-frontends tools (2014-3-5)
	* configs/qemu-i486/nsh: Configuration converted to use the
	  kconfig-frontends tools (2014-3-5)
	* Many files:  Use common naming for all buildroot toolchains
	  (2014-3-5).
	* Many files:  Use common naming for rest of the toolchains (2014-3-5).
	* configs/ne64badge/ostest and demo9s12nec64/ostest: Configurations
	  converted to use the kconfig-frontends tools (2014-3-5)